<resources>
    <string name="app_name">Frontend</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="title_product_color">Color</string>
    <string name="title_product_quantity">Quantity</string>
    <string name="title_product_total_price">TOTAL PRICE</string>
    <string name="title_helpcenter_helpcenter">Help Center</string>
    <string name="title_helpcenter_search">Search</string>
    <string name="title_button_onboarding_skip">Skip</string>
    <string name="title_button_helpcenter_faqs">FAQs</string>
    <string name="title_button_helpcenter_contactus">Contact Us</string>
    <string name="title_button_productdetail_addtocart">ADD TO CART</string>

</resources>